Gaim: The Pimpin' Penguin IM Clone that's good for the soul!

version 0.75cvs :
	* Yahoo! file transfer (Tim Ringenbach)
	* Improved i18n support for MSN email notification (Felipe Contreras)
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Italian translation updated (Claudio Satriano)
	* Portuguese (Brazilian) translation updated (Mauricio de Lemos
	  Rodrigues Collares Neto)
	* Vietnamese translation updated (T.M.Thanh)

version 0.74 (11/25/2003):
	* Sort-by-size log sorting fix
	* Log directory umask fix for users of gaim-remote
	* Fix Jabber room creation on MUC servers.
	* Vietnamese translation added (T.M.Thanh)

version 0.73 (11/21/2003):
	* New Logging format and code:
		* fixes i18n issues with logs
		* compatible with old logs
		* hopefully fixes segfault in viewing logs
	* New disconnected account dialog (Thanks, Daniel Atallah)
	* Fixes several Jabber bugs
	* Fixes the bug where some dialogs would crash when spell checking was
	  enabled. Closes #827930.
	* Fixed unblocking of users in MSN (Robert Mibus)
	* Fixes outgoing mobile pages on MSN.
	* The border on the close buttons on inactive tabs are no longer shown,
	  thanks to a fix used by Galeon.
	* Compatible with autoconf 2.58.
	* Cleaned up gtkspell-related code (Robert McQueen)
	* Changed the parameters for the received-chat-msg signal.
	* Added a Release Notification plugin
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* Finnish translation updated (Arto Alakulju)
	* French translation updated (Eric Boumaour)
	* German translation updated (Bjoern Voigt)
	* Hindi trnaslation updated (Ravi (raviratlami))
	* Italian translation updated (Claudio Satriano)
	* Norwegian translation updated (Petter Johan Olsen)
	* Polish translation updated (Emil Nowak)